# xNoise

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  test.ipynb
config/: default.yaml  model_default.yaml  model_large.yaml  model_small.yaml  snel_default.yaml  test.yaml  test2.yaml
docs/assets/: generate_thumbnail.py
examples/: analyze_metrics.ipynb  download_imagenet.ipynb  load_hdf5_dataset.ipynb  submit_test.sh  submit_train_das.sh  submit_train_snel.sh  test.ipynb  test.py  train.py
scripts/: images_to_hdf5.py
src/ddpm_clip/: __init__.py
src/ddpm_clip/data/: __init__.py  clip_dataset.py  preprocessing.py
src/ddpm_clip/models/: __init__.py  analysis.py  ddpm.py  ema.py  unet.py
src/ddpm_clip/utils/: __init__.py  config.py  generation.py  training.py  visualization.py  vocabularies.py
utils/: ddpm_utils.py  other_utils.py
