[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddpm-clip"
version = "0.1.0"
description = "CLIP-Guided DDPM for Text-to-Image Generation"
readme = "README.md"
authors = [
    {name = "xNoise Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "clip @ git+https://github.com/openai/CLIP.git",
    "Pillow>=9.5.0",
    "matplotlib>=3.7.0",
    "imageio>=2.31.0",
    "einops>=0.6.1",
    "tqdm>=4.65.0",
    "jupyter>=1.0.0",
    "ipython>=8.12.0",
    "ipywidgets>=8.0.0",
    "pyyaml>=6.0",
    "scikit-image>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/SCiarella/xNoise"
Repository = "https://github.com/SCiarella/xNoise"
Issues = "https://github.com/SCiarella/xNoise/issues"

[project.scripts]
ddpm-train = "scripts.train:main"
ddpm-generate = "scripts.generate:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
